--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   datasource:
-    url: jdbc:mysql://localhost:3306/demo
+    url: jdbc:mysql://localhost:3306/rainbow
     username: root
     password: zx123456
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -14,7 +14,7 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: jdbc:mysql://120.46.13.61:3306/demo
+    url: jdbc:mysql://120.46.13.61:3306/rainbow
     username: root
     password: zhaoxiang123
     driver-class-name: com.mysql.cj.jdbc.Driver
